# gradconnectai

./: .gitignore  README.md  docker-compose.yml  serve_ollama_qwen.sh  serve_vllm_qwen.sh
backend/: .dockerignore  .env.example  Dockerfile  migrate_add_lab_focus.sql  migrate_embedding_dim.sql  pyproject.toml  requirements.txt  run_migrate.py  run_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/routes/: admin.py  discovery.py  email_drafts.py  gdpr.py  health.py  matches.py  professors.py  students.py
backend/app/core/: __init__.py  audit.py  config.py  logging.py  rate_limit.py  timezone.py  validation.py
backend/app/db/: models.py  schema.sql  session.py
backend/app/schemas/: email_drafts.py  matches.py  students.py
backend/app/services/: __init__.py  llm_client.py  store.py
backend/app/services/discovery/: __init__.py  browser_use_search.py  crawl4ai_client.py  crawler.py  google_browser_search.py  google_search.py  harvester.py  linkedin_discovery.py  pipeline.py  query_planner.py  rate_limiter.py  (+2 more)
backend/tests/: conftest.py  test_browser_use_search_helpers.py  test_crawl4ai_client.py  test_email_generator.py  test_embedding.py  test_embedding_model_resolution.py  test_evidence_gate.py  test_google_browser_search.py  test_google_search.py  test_harvester.py  test_health.py  test_linkedin_discovery.py  test_llm_fallback_extraction.py  test_matching_engine.py  test_opportunity_extraction.py  test_query_planner.py  test_store_time_serialization.py  test_url_prioritizer.py  test_validation.py
(+42 files in other folders)
